{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 487,
  "lineage": "77e06259-efa7-816a-cfce-e17df44e93e7",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076e3a557efe1aa9c",
            "arn": "arn:aws:ec2:ap-south-1:058430311309:instance/i-00286c3a31f189844",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00286c3a31f189844",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "local-git-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d119848c53e8cc35",
            "private_dns": "ip-10-0-101-84.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.84",
            "public_ip": "65.0.81.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07df8180c9abe193d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ba547bde5fcb148",
            "tags": {
              "Name": "mern-ude"
            },
            "tags_all": {
              "Name": "mern-ude"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "mern-ude"
            },
            "vpc_security_group_ids": [
              "sg-00ed570209aefcb31",
              "sg-0c0be71c2b3951bc3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "data.aws_ami.latest-ami",
            "data.aws_availability_zones.available",
            "data.aws_security_groups.sgID",
            "module.mernude-vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05936a40251f1e465",
            "association_id": "eipassoc-0c4db1a5fd1941517",
            "domain": "vpc",
            "id": "eipalloc-05936a40251f1e465",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-089bb291ec9f27451",
            "private_dns": "ip-10-0-101-79.ap-south-1.compute.internal",
            "private_ip": "10.0.101.79",
            "public_dns": "ec2-52-66-121-207.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.121.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mernude-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "mernude-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:internet-gateway/igw-0f704fdbcaef003cc",
            "id": "igw-0f704fdbcaef003cc",
            "owner_id": "058430311309",
            "tags": {
              "Name": "mernude-vpc"
            },
            "tags_all": {
              "Name": "mernude-vpc"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05936a40251f1e465",
            "connectivity_type": "public",
            "id": "nat-045e5671394254a50",
            "network_interface_id": "eni-089bb291ec9f27451",
            "private_ip": "10.0.101.79",
            "public_ip": "52.66.121.207",
            "subnet_id": "subnet-06ba547bde5fcb148",
            "tags": {
              "Name": "mernude-vpc-ap-south-1a"
            },
            "tags_all": {
              "Name": "mernude-vpc-ap-south-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_eip.nat",
            "module.mernude-vpc.aws_internet_gateway.this",
            "module.mernude-vpc.aws_subnet.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dba800f43b24a8031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-045e5671394254a50",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dba800f43b24a803",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_eip.nat",
            "module.mernude-vpc.aws_internet_gateway.this",
            "module.mernude-vpc.aws_nat_gateway.this",
            "module.mernude-vpc.aws_route_table.private",
            "module.mernude-vpc.aws_subnet.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f704fdbcaef003cc",
            "id": "r-rtb-0a5d9f0862b06513d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5d9f0862b06513d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_internet_gateway.this",
            "module.mernude-vpc.aws_route_table.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:route-table/rtb-0dba800f43b24a803",
            "id": "rtb-0dba800f43b24a803",
            "owner_id": "058430311309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045e5671394254a50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mernude-vpc-private"
            },
            "tags_all": {
              "Name": "mernude-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:route-table/rtb-0a5d9f0862b06513d",
            "id": "rtb-0a5d9f0862b06513d",
            "owner_id": "058430311309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f704fdbcaef003cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mernude-vpc-public"
            },
            "tags_all": {
              "Name": "mernude-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ffcd79c12dd6194",
            "route_table_id": "rtb-0dba800f43b24a803",
            "subnet_id": "subnet-0ac2462f06004c488"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.private",
            "module.mernude-vpc.aws_subnet.private",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef3014e11553845c",
            "route_table_id": "rtb-0dba800f43b24a803",
            "subnet_id": "subnet-08a60065ceaa3d6f1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.private",
            "module.mernude-vpc.aws_subnet.private",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebcbb900f9edd1f0",
            "route_table_id": "rtb-0dba800f43b24a803",
            "subnet_id": "subnet-050790e6a52bc0065"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.private",
            "module.mernude-vpc.aws_subnet.private",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06304fd1bdd35b8fa",
            "route_table_id": "rtb-0a5d9f0862b06513d",
            "subnet_id": "subnet-06ba547bde5fcb148"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.public",
            "module.mernude-vpc.aws_subnet.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057991be113457879",
            "route_table_id": "rtb-0a5d9f0862b06513d",
            "subnet_id": "subnet-071b9b0e509c3554f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.public",
            "module.mernude-vpc.aws_subnet.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac9c0e8fe8f8930",
            "route_table_id": "rtb-0a5d9f0862b06513d",
            "subnet_id": "subnet-068a6de1d0fa700c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_route_table.public",
            "module.mernude-vpc.aws_subnet.public",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-0ac2462f06004c488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac2462f06004c488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Name": "mernude-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-08a60065ceaa3d6f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a60065ceaa3d6f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Name": "mernude-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-050790e6a52bc0065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050790e6a52bc0065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-private-ap-south-1c"
            },
            "tags_all": {
              "Name": "mernude-vpc-private-ap-south-1c"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-06ba547bde5fcb148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba547bde5fcb148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-public-ap-south-1a",
              "name": "ares"
            },
            "tags_all": {
              "Name": "mernude-vpc-public-ap-south-1a",
              "name": "ares"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-071b9b0e509c3554f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071b9b0e509c3554f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-public-ap-south-1b",
              "name": "ares"
            },
            "tags_all": {
              "Name": "mernude-vpc-public-ap-south-1b",
              "name": "ares"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:subnet/subnet-068a6de1d0fa700c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a6de1d0fa700c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058430311309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mernude-vpc-public-ap-south-1c",
              "name": "ares"
            },
            "tags_all": {
              "Name": "mernude-vpc-public-ap-south-1c",
              "name": "ares"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.mernude-vpc.aws_vpc.this",
            "module.mernude-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mernude-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:vpc/vpc-0a1d58587fd122347",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0749d18216fdb31eb",
            "default_route_table_id": "rtb-071b780ed82787e22",
            "default_security_group_id": "sg-00ed570209aefcb31",
            "dhcp_options_id": "dopt-0e6c7bdcca95179b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a1d58587fd122347",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071b780ed82787e22",
            "owner_id": "058430311309",
            "tags": {
              "Name": "mernude-vpc"
            },
            "tags_all": {
              "Name": "mernude-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058430311309:security-group/sg-0c0be71c2b3951bc3",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0be71c2b3951bc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "206.84.231.104/32"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mern-ude-20220821101757238700000001",
            "name_prefix": "mern-ude-",
            "owner_id": "058430311309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mern-ude"
            },
            "tags_all": {
              "Name": "mern-ude"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0a1d58587fd122347"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-757401389",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c0be71c2b3951bc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 8080,
            "id": "sgrule-978582468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0be71c2b3951bc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "206.84.231.104/32"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-962164226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0be71c2b3951bc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mernude-vpc.aws_vpc.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}